SENTRY-1021: Add PMD to Sentry tests (Colm O hEigeartaigh, Reviewed by: Hao Hao)
Change-Id: Ie7a5b71b30efce23d98e9fb3fc0f951a9fe157ef